# doteq

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
doteq/: __init__.py  cli.py  sync.py  utils.py
tests/: test_cli.py  test_sync.py
